tests/ui/modules/path-invalid-form.rs
#[path = 123]  //~ ERROR malformed `path` attribute
mod foo;

fn main() {}
